<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/y430"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/lv_head_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y132"
        >

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x72"
            android:text="@string/task_abondon"
            android:textColor="@color/send_task_rb_unchecked"
            android:textSize="@dimen/x46"
            />

        <RelativeLayout
            android:layout_width="@dimen/x440"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x72">


            <TextView
                android:id="@+id/finished_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished_time"
                android:includeFontPadding="false"
                android:textSize="@dimen/x46"
                />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2016.03.12"
                android:layout_toRightOf="@+id/finished_time"
                android:includeFontPadding="false"
                android:textSize="@dimen/x46"
                android:layout_marginLeft="@dimen/x10"
                />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lv_item_underline"
        android:layout_width="@dimen/x988"
        android:layout_height="@dimen/y2"
        android:layout_below="@+id/lv_head_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/send_lv_item_line"/>

    <RelativeLayout
        android:id="@+id/num_layout"
        android:layout_below="@+id/lv_item_underline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x30"
        android:layout_marginLeft="@dimen/x72"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_number"
            android:textSize="@dimen/x46"
            android:includeFontPadding="false"
            />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_tv"
            android:text="CRJ22624"
            android:textSize="@dimen/x46"
            android:includeFontPadding="false"
            />

        <ImageView
            android:id="@+id/read_state_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_number"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15px"
            android:src="@drawable/red_tips"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lv_item_underline"
        android:layout_marginTop="@dimen/y30"
        android:layout_marginRight="@dimen/x46"
        android:visibility="invisible"
        android:src="@drawable/rob_img" />


    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_below="@+id/num_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x26"
        android:layout_marginLeft="@dimen/x72"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/construct_address"
            android:textSize="@dimen/x42"
            android:includeFontPadding="false"
            android:textColor="@color/rob_item_text"/>

        <TextView
            android:id="@+id/tv_workarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="黄浦区淮海东路８５号淮南商业大厦"
            android:textSize="@dimen/x42"
            android:includeFontPadding="false"
            android:textColor="@color/rob_item_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/x43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x72"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_time"
            android:textSize="@dimen/x42"
            android:includeFontPadding="false"
            android:textColor="@color/rob_item_text"/>

        <TextView
            android:id="@+id/tv_finishtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016.03.27"
            android:textSize="@dimen/x42"
            android:includeFontPadding="false"
            android:textColor="@color/rob_item_text"/>

    </LinearLayout>
</RelativeLayout>

