<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x720"
    android:layout_height="match_parent"
    android:background="@color/slidingmenu_bg"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/en_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jimmy.Lin"
        android:textSize="@dimen/x60"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/y184"
        android:layout_marginLeft="@dimen/x98"
        />
    
    <TextView 
        android:id="@+id/ch_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="刘华强"
        android:textSize="@dimen/x45"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/y62"
        android:layout_marginLeft="@dimen/x98"
        />
	
    <View 
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y2"
        android:background="@drawable/sliding_underline"
        android:layout_marginTop="@dimen/x140"
        android:layout_gravity="center_horizontal"
        />
    
    <RelativeLayout
        android:id="@+id/update_layout"
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y180"
        android:layout_gravity="center_horizontal"
        >
        

        <ImageView
            android:id="@+id/update_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/update"
            android:layout_centerVertical="true"/>

        <!-- 在FrameLayout中才可以用 android:layout_gravity="right|top" 属性 -->
        <ImageView
            android:id="@+id/red_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/update_iv"
            android:background="@drawable/red_tips"
            android:layout_alignTop="@+id/update_iv"
            android:visibility="visible"/>
            

        <TextView
            android:id="@+id/check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x64"
            android:layout_toRightOf="@+id/update_iv"
            android:text="@string/check_update"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"/>
        
    </RelativeLayout>
    
    
    <View 
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y2"
        android:background="@drawable/sliding_underline"
        android:layout_gravity="center_horizontal"
        />
    
    <LinearLayout 
        android:id="@+id/use_layout"
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y180"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shuoming"
            android:layout_gravity="center_vertical"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x64"
            android:text="@string/use_mean"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"/>
        
    </LinearLayout>


    <View
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y2"
        android:background="@drawable/sliding_underline"
        android:layout_gravity="center_horizontal"
        />
    
    <LinearLayout 
        android:id="@+id/exit_avai"
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y180"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/exit"
            android:layout_gravity="center_vertical"/>
        
        <TextView
            android:id="@+id/exit_avai_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x64"
            android:text="@string/exit_avaition"
            android:textColor="@color/white"
            android:textSize="@dimen/x45"/>
        
    </LinearLayout>

    <View
        android:layout_width="@dimen/x542"
        android:layout_height="@dimen/y2"
        android:background="@drawable/sliding_underline"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
